# handmade

./: .clang-format  .gitattributes  .gitignore  README.md  dockerfile  setup guide.txt  v.mod
code/: Makefile  build.sh  handmade.c  handmade.cpp  handmade.h  sdl_handmade.c  sdl_handmade.cpp
gamesrc/: handmade.v  time.v
handmade/: CMakeLists.txt  fixed_time.cpp  handmade.cpp  handmade.cppm  handmade.hpp  handmade_impl.cpp  platform.cppm  platform.hpp  sdl_handmade.cpp  sdl_main.cpp  sdl_platform_impl.cpp
interfaces/: platform_interface.v
platform/: build_debug.sh  build_release.sh  sdl_main.v
src/: CMakeLists.txt  fixed_time.cpp  handmade.cpp  handmade.h  sdl_handmade.cpp
